--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 NODE_ENV=development
 
+PORT=5000
+
 DB_URL=postgresql://username:password@localhost:5432/database_name
 DB_MAX_CONNECTIONS=20
 DB_IDLE_TIMEOUT=30000
