--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,19 @@
+# Application
 NODE_ENV=development
-
 PORT=5000
 
+# Database Configuration
 DB_URL=postgresql://username:password@localhost:5432/database_name
 DB_MAX_CONNECTIONS=20
 DB_IDLE_TIMEOUT=30000
 DB_CONNECTION_TIMEOUT=2000
+
+# Redis Configuration
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=your-redis-password-here
+
+# JWT Configuration
+JWT_SECRET=your-super-secret-jwt-key-here-make-it-long-and-random
+JWT_ACCESS_EXPIRATION=15m
+JWT_REFRESH_EXPIRATION=7d
