--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # Application
 NODE_ENV=development
 PORT=5000
+FRONTEND_URL=http://localhost:3000
 
 # Database Configuration
 DB_URL=postgresql://username:password@localhost:5432/database_name
