--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,11 @@ JWT_ACCESS_EXPIRATION=15m
 
 JWT_REFRESH_SECRET=your-super-secret-jwt-key-here-make-it-long-and-random
 JWT_REFRESH_EXPIRATION=7d
+
+# Storage Configuration
+S3_ENDPOINT=https://ddaef179b5a75829b076a7bac232eab4.r2.cloudflarestorage.com
+S3_REGION=auto
+S3_BUCKET=velony
+
+S3_ACCESS_KEY_ID=your_access_key
+S3_SECRET_ACCESS_KEY=your_secret_key
