feat: add email verification functionality

--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,9 @@ S3_BUCKET=velony
 
 S3_ACCESS_KEY_ID=your_access_key
 S3_SECRET_ACCESS_KEY=your_secret_key
+
+# Mail Configuration
+RESEND_API_KEY=your_api_key
+
+EMAIL_FROM=no-reply@velony.app
+EMAIL_TOKEN_EXPIRATION=5m
