--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
+    "handlebars": "^4.7.8",
     "ioredis": "^5.8.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
@@ -40,6 +41,7 @@
     "passport-local": "^1.0.0",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
+    "resend": "^6.2.2",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
